fix header menu z-indexx

--- a/src/components/own/layout/header/Header.module.scss
+++ b/src/components/own/layout/header/Header.module.scss
@@ -181,6 +181,7 @@
           transform-origin: top;
           margin-right: 16px;
           padding: 0 2px;
+          z-index: 1;
           @include responsive-size(screen-l) {
             margin-right: 8px;
           }
@@ -276,7 +277,7 @@
               width: 100%;
               height: 150px;
               @include responsive-size(screen-m) {
-                height: 130px;
+                content: none;
               }
             }
             @include setting-font('Josefin Sans', normal, 700, 14px, 120%);
@@ -291,6 +292,7 @@
               color: $White;
               border-bottom: 1px solid rgba(255, 255, 255, 0.3);
               z-index: 100;
+              opacity: 1;
               &:hover {
                 background: $Grass-100;
                 border-radius: 5px;
@@ -319,8 +321,6 @@
               opacity: 1;
               transform: translateY(35%);
               transition: all 0.3s ease-out;
-              @include responsive-size(screen-m) {
-              }
             }
             background: $Grass-100;
             border-radius: 6px;
