--- a/src/pages/public/about-us/about-us-top/AboutUsTop.module.scss
+++ b/src/pages/public/about-us/about-us-top/AboutUsTop.module.scss
@@ -8,7 +8,24 @@
   max-height: 507px;
   width: 100%;
   height: 100%;
-
+  &.active-anim {
+    &.active-anim {
+      & > :nth-child(1) {
+        @include anim-move-top(50px, 1.2s);
+        & > :nth-child(1) {
+          & > :nth-child(1) {
+            @include anim-move-top(20px, 1.2s, 1s);
+          }
+          & > :nth-child(2) {
+            @include anim-move-top(20px, 1.2s, 1.7s);
+          }
+        }
+      }
+      & > :nth-child(2) {
+        @include anim-move-right(50px, 1.2s);
+      }
+    }
+  }
   @include responsive-size(screen-l) {
     padding: 0 10px;
   }
